--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "rn-viewpager": "^1.2.9"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
